--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       <h1>The Hacker Times</h1>
     </header>
     <!-- navigation -->
-    <div class="nav">
     <nav>
       <ul>
         <li><a href="#">HTML & CSS</a></li>
@@ -29,11 +28,10 @@
         <li><a href="#">PYTHON</a></li>
       </ul>
     </nav>
-  </div>
     <!-- front page article -->
     <main>
       <h2>Have You Tried Turning It On and Off Again?</h2>
-      <h5>By Maurice Moss</h5>
+      <span><h5>By Maurice Moss</h5></span>
       <img src="assets/front-page-article.png" alt="placeholder">
       <p>
         Cupcake ipsum dolor sit amet. Candy gummies jelly-o pie toffee cheesecake pastry cake. Soufflé sesame snaps tootsie roll jelly-o soufflé tart gummies. Dessert lollipop halvah brownie chocolate bar gingerbread. Lollipop chocolate bar dragée jelly-o cookie tiramisu icing. Dragée muffin marshmallow jelly beans jelly beans. Tootsie roll pie cheesecake. Brownie biscuit gingerbread cupcake sweet roll sweet jelly-o cookie pie. Lemon drops topping lemon drops jelly beans toffee. Tiramisu cotton candy pie toffee cake chocolate cake apple pie. Cupcake bear claw donut apple pie halvah sesame snaps macaroon tootsie roll
